carts/zenc/null0.h

typedef int32_t i32;
typedef uint8_t u8;
typedef uint32_t u32;
typedef float f32;
typedef struct {
  u32 width;
  u32 height;
} Dimensions;
typedef struct {
  i32 x;
  i32 y;
} Vector;
typedef struct {
  i32 x;
  i32 y;
  i32 width;
  i32 height;
} Rectangle;
typedef struct {
  u8 r;
  u8 g;
  u8 b;
  u8 a;
} Color;
typedef enum ImageFilter {
  FILTER_NEARESTNEIGHBOR = 0,
  FILTER_BILINEAR,
  FILTER_SMOOTH
} ImageFilter;
// GRAPHICS

// Create a new blank image.
NULL0_IMPORT("new_image")
extern u32 new_image(i32 width, i32 height, Color color);
// Copy an image to a new image.
NULL0_IMPORT("image_copy")
extern u32 image_copy(u32 image);
// Create an image from a region of another image.
NULL0_IMPORT("image_subimage")
extern u32 image_subimage(u32 image, i32 x, i32 y, i32 width, i32 height);
// Clear the screen.
NULL0_IMPORT("clear")
extern void clear(Color color);
// Draw a single pixel on the screen.
NULL0_IMPORT("draw_point")
extern void draw_point(i32 x, i32 y, Color color);
// Draw a line on the screen.
NULL0_IMPORT("draw_line")
extern void draw_line(i32 startPosX, i32 startPosY, i32 endPosX, i32 endPosY, Color color);
// Draw a filled rectangle on the screen.
NULL0_IMPORT("draw_rectangle")
extern void draw_rectangle(i32 posX, i32 posY, i32 width, i32 height, Color color);
// Draw a filled triangle on the screen.
NULL0_IMPORT("draw_triangle")
extern void draw_triangle(i32 x1, i32 y1, i32 x2, i32 y2, i32 x3, i32 y3, Color color);
// Draw a filled ellipse on the screen.
NULL0_IMPORT("draw_ellipse")
extern void draw_ellipse(i32 centerX, i32 centerY, i32 radiusX, i32 radiusY, Color color);
// Draw a filled circle on the screen.
NULL0_IMPORT("draw_circle")
extern void draw_circle(i32 centerX, i32 centerY, i32 radius, Color color);
// Draw a filled polygon on the screen.
NULL0_IMPORT("draw_polygon")
extern void draw_polygon(i32* points, i32 numPoints, u8* color);
// Draw a filled arc on the screen.
NULL0_IMPORT("draw_arc")
extern void draw_arc(i32 centerX, i32 centerY, f32 radius, f32 startAngle, f32 endAngle, i32 segments, Color color);
// Draw a filled round-rectangle on the screen.
NULL0_IMPORT("draw_rectangle_rounded")
extern void draw_rectangle_rounded(i32 x, i32 y, i32 width, i32 height, i32 cornerRadius, Color color);
// Draw an image on the screen.
NULL0_IMPORT("draw_image")
extern void draw_image(u32 src, i32 posX, i32 posY);
// Draw a tinted image on the screen.
NULL0_IMPORT("draw_image_tint")
extern void draw_image_tint(u32 src, i32 posX, i32 posY, Color tint);
// Draw an image, rotated, on the screen.
NULL0_IMPORT("draw_image_rotated")
extern void draw_image_rotated(u32 src, i32 posX, i32 posY, f32 degrees, f32 offsetX, f32 offsetY, ImageFilter filter);
// Draw an image, flipped, on the screen.
NULL0_IMPORT("draw_image_flipped")
extern void draw_image_flipped(u32 src, i32 posX, i32 posY, bool flipHorizontal, bool flipVertical, bool flipDiagonal);
// Draw an image, scaled, on the screen.
NULL0_IMPORT("draw_image_scaled")
extern void draw_image_scaled(u32 src, i32 posX, i32 posY, f32 scaleX, f32 scaleY, f32 offsetX, f32 offsetY, ImageFilter filter);
// Draw some text on the screen.
NULL0_IMPORT("draw_text")
extern void draw_text(u32 font, char* text, i32 posX, i32 posY, Color color);
// Save an image to persistant storage.
NULL0_IMPORT("save_image")
extern void save_image(u32 image, char* filename);
// Load an image from a file in cart.
NULL0_IMPORT("load_image")
extern u32 load_image(char* filename);
// Resize an image, return copy.
NULL0_IMPORT("image_resize")
extern u32 image_resize(u32 image, i32 newWidth, i32 newHeight, ImageFilter filter);
// Scale an image, return copy.
NULL0_IMPORT("image_scale")
extern u32 image_scale(u32 image, f32 scaleX, f32 scaleY, ImageFilter filter);
// Replace a color in an image, in-place.
NULL0_IMPORT("image_color_replace")
extern void image_color_replace(u32 image, Color color, Color replace);
// Tint a color in an image, in-place.
NULL0_IMPORT("image_color_tint")
extern void image_color_tint(u32 image, Color color);
// Fade a color in an image, in-place.
NULL0_IMPORT("image_color_fade")
extern void image_color_fade(u32 image, f32 alpha);
// Copy a font to a new font.
NULL0_IMPORT("font_copy")
extern u32 font_copy(u32 font);
// Scale a font, return a new font.
NULL0_IMPORT("font_scale")
extern u32 font_scale(u32 font, f32 scaleX, f32 scaleY, ImageFilter filter);
// Load a BMF font from a file in cart.
NULL0_IMPORT("load_font_bmf")
extern u32 load_font_bmf(char* filename, char* characters);
// Load a BMF font from an image.
NULL0_IMPORT("load_font_bmf_from_image")
extern u32 load_font_bmf_from_image(u32 image, char* characters);
// Measure the size of some text.
NULL0_IMPORT("measure_text")
extern Dimensions* measure_text(u32 font, char* text, i32 textLength);
// Meaure an image (use 0 for screen).
NULL0_IMPORT("measure_image")
extern Dimensions* measure_image(u32 image);
// Load a TTY font from a file in cart.
NULL0_IMPORT("load_font_tty")
extern u32 load_font_tty(char* filename, i32 glyphWidth, i32 glyphHeight, char* characters);
// Load a TTY font from an image.
NULL0_IMPORT("load_font_tty_from_image")
extern u32 load_font_tty_from_image(u32 image, i32 glyphWidth, i32 glyphHeight, char* characters);
// Load a TTF font from a file in cart.
NULL0_IMPORT("load_font_ttf")
extern u32 load_font_ttf(char* filename, i32 fontSize);
// Invert the colors in an image, in-place.
NULL0_IMPORT("image_color_invert")
extern void image_color_invert(u32 image);
// Calculate a rectangle representing the available alpha border in an image.
NULL0_IMPORT("image_alpha_border")
extern Rectangle* image_alpha_border(u32 image, f32 threshold);
// Crop an image, in-place.
NULL0_IMPORT("image_crop")
extern void image_crop(u32 image, i32 x, i32 y, i32 width, i32 height);
// Crop an image based on the alpha border, in-place.
NULL0_IMPORT("image_alpha_crop")
extern void image_alpha_crop(u32 image, f32 threshold);
// Adjust the brightness of an image, in-place.
NULL0_IMPORT("image_color_brightness")
extern void image_color_brightness(u32 image, f32 factor);
// Flip an image, in-place.
NULL0_IMPORT("image_flip")
extern void image_flip(u32 image, bool horizontal, bool vertical);
// Change the contrast of an image, in-place.
NULL0_IMPORT("image_color_contrast")
extern void image_color_contrast(u32 image, f32 contrast);
// Use an image as an alpha-mask on another image.
NULL0_IMPORT("image_alpha_mask")
extern void image_alpha_mask(u32 image, u32 alphaMask, i32 posX, i32 posY);
// Create a new image, rotating another image.
NULL0_IMPORT("image_rotate")
extern u32 image_rotate(u32 image, f32 degrees, ImageFilter filter);
// Create a new image of a gradient.
NULL0_IMPORT("image_gradient")
extern u32 image_gradient(i32 width, i32 height, Color topLeft, Color topRight, Color bottomLeft, Color bottomRight);
// Unload an image.
NULL0_IMPORT("unload_image")
extern void unload_image(u32 image);
// Unload a font.
NULL0_IMPORT("unload_font")
extern void unload_font(u32 font);
// Clear an image.
NULL0_IMPORT("clear_image")
extern void clear_image(u32 destination, Color color);
// Draw a single pixel on an image.
NULL0_IMPORT("draw_point_on_image")
extern void draw_point_on_image(u32 destination, i32 x, i32 y, Color color);
// Draw a line on an image.
NULL0_IMPORT("draw_line_on_image")
extern void draw_line_on_image(u32 destination, i32 startPosX, i32 startPosY, i32 endPosX, i32 endPosY, Color color);
// Draw a filled rectangle on an image.
NULL0_IMPORT("draw_rectangle_on_image")
extern void draw_rectangle_on_image(u32 destination, i32 posX, i32 posY, i32 width, i32 height, Color color);
// Draw a filled triangle on an image.
NULL0_IMPORT("draw_triangle_on_image")
extern void draw_triangle_on_image(u32 destination, i32 x1, i32 y1, i32 x2, i32 y2, i32 x3, i32 y3, Color color);
// Draw a filled ellipse on an image.
NULL0_IMPORT("draw_ellipse_on_image")
extern void draw_ellipse_on_image(u32 destination, i32 centerX, i32 centerY, i32 radiusX, i32 radiusY, Color color);
// Draw a circle on an image.
NULL0_IMPORT("draw_circle_on_image")
extern void draw_circle_on_image(u32 destination, i32 centerX, i32 centerY, i32 radius, Color color);
// Draw a filled polygon on an image.
NULL0_IMPORT("draw_polygon_on_image")
extern void draw_polygon_on_image(u32 destination, i32* points, i32 numPoints, u8* color);
// Draw a filled round-rectangle on an image.
NULL0_IMPORT("draw_rectangle_rounded_on_image")
extern void draw_rectangle_rounded_on_image(u32 destination, i32 x, i32 y, i32 width, i32 height, i32 cornerRadius, Color color);
// Draw an image on an image.
NULL0_IMPORT("draw_image_on_image")
extern void draw_image_on_image(u32 destination, u32 src, i32 posX, i32 posY);
// Draw a tinted image on an image.
NULL0_IMPORT("draw_image_tint_on_image")
extern void draw_image_tint_on_image(u32 destination, u32 src, i32 posX, i32 posY, Color tint);
// Draw an image, rotated, on an image.
NULL0_IMPORT("draw_image_rotated_on_image")
extern void draw_image_rotated_on_image(u32 destination, u32 src, i32 posX, i32 posY, f32 degrees, f32 offsetX, f32 offsetY, ImageFilter filter);
// Draw an image, flipped, on an image.
NULL0_IMPORT("draw_image_flipped_on_image")
extern void draw_image_flipped_on_image(u32 destination, u32 src, i32 posX, i32 posY, bool flipHorizontal, bool flipVertical, bool flipDiagonal);
// Draw an image, scaled, on an image.
NULL0_IMPORT("draw_image_scaled_on_image")
extern void draw_image_scaled_on_image(u32 destination, u32 src, i32 posX, i32 posY, f32 scaleX, f32 scaleY, f32 offsetX, f32 offsetY, ImageFilter filter);
// Draw some text on an image.
NULL0_IMPORT("draw_text_on_image")
extern void draw_text_on_image(u32 destination, u32 font, char* text, i32 posX, i32 posY, Color color);
// Draw a outlined (with thickness) rectangle on the screen.
NULL0_IMPORT("draw_rectangle_outline")
extern void draw_rectangle_outline(i32 posX, i32 posY, i32 width, i32 height, i32 thickness, Color color);
// Draw a outlined (with thickness) triangle on the screen.
NULL0_IMPORT("draw_triangle_outline")
extern void draw_triangle_outline(i32 x1, i32 y1, i32 x2, i32 y2, i32 x3, i32 y3, i32 thickness, Color color);
// Draw a outlined (with thickness) ellipse on the screen.
NULL0_IMPORT("draw_ellipse_outline")
extern void draw_ellipse_outline(i32 centerX, i32 centerY, i32 radiusX, i32 radiusY, i32 thickness, Color color);
// Draw a outlined (with thickness) circle on the screen.
NULL0_IMPORT("draw_circle_outline")
extern void draw_circle_outline(i32 centerX, i32 centerY, i32 radius, i32 thickness, Color color);
// Draw a outlined (with thickness) polygon on the screen.
NULL0_IMPORT("draw_polygon_outline")
extern void draw_polygon_outline(i32* points, i32 numPoints, i32 thickness, u8* color);
// Draw a outlined (with thickness) arc on the screen.
NULL0_IMPORT("draw_arc_outline")
extern void draw_arc_outline(i32 centerX, i32 centerY, f32 radius, f32 startAngle, f32 endAngle, i32 segments, i32 thickness, Color color);
// Draw a outlined (with thickness) round-rectangle on the screen.
NULL0_IMPORT("draw_rectangle_rounded_outline")
extern void draw_rectangle_rounded_outline(i32 x, i32 y, i32 width, i32 height, i32 cornerRadius, i32 thickness, Color color);
// Draw a outlined (with thickness) rectangle on an image.
NULL0_IMPORT("draw_rectangle_outline_on_image")
extern void draw_rectangle_outline_on_image(u32 destination, i32 posX, i32 posY, i32 width, i32 height, i32 thickness, Color color);
// Draw a outlined (with thickness) triangle on an image.
NULL0_IMPORT("draw_triangle_outline_on_image")
extern void draw_triangle_outline_on_image(u32 destination, i32 x1, i32 y1, i32 x2, i32 y2, i32 x3, i32 y3, i32 thickness, Color color);
// Draw a outlined (with thickness) ellipse on an image.
NULL0_IMPORT("draw_ellipse_outline_on_image")
extern void draw_ellipse_outline_on_image(u32 destination, i32 centerX, i32 centerY, i32 radiusX, i32 radiusY, i32 thickness, Color color);
// Draw a outlined (with thickness) circle on an image.
NULL0_IMPORT("draw_circle_outline_on_image")
extern void draw_circle_outline_on_image(u32 destination, i32 centerX, i32 centerY, i32 radius, i32 thickness, Color color);
// Draw a outlined (with thickness) polygon on an image.
NULL0_IMPORT("draw_polygon_outline_on_image")
extern void draw_polygon_outline_on_image(u32 destination, i32* points, i32 numPoints, i32 thickness, u8* color);
// Draw a outlined (with thickness) round-rectangle on an image.
NULL0_IMPORT("draw_rectangle_rounded_outline_on_image")
extern void draw_rectangle_rounded_outline_on_image(u32 destination, i32 x, i32 y, i32 width, i32 height, i32 cornerRadius, i32 thickness, Color color);