carts/odin/null0/null0.odin


    // GRAPHICS
    // Create a new blank image.
    new_image :: proc(width: i32, height: i32, color: Color) -> Image ---
    // Copy an image to a new image.
    image_copy :: proc(image: Image) -> Image ---
    // Create an image from a region of another image.
    image_subimage :: proc(image: Image, x: i32, y: i32, width: i32, height: i32) -> Image ---
    // Clear the screen.
    clear :: proc(color: Color) ---
    // Draw a single pixel on the screen.
    draw_point :: proc(x: i32, y: i32, color: Color) ---
    // Draw a line on the screen.
    draw_line :: proc(startPosX: i32, startPosY: i32, endPosX: i32, endPosY: i32, color: Color) ---
    // Draw a filled rectangle on the screen.
    draw_rectangle :: proc(posX: i32, posY: i32, width: i32, height: i32, color: Color) ---
    // Draw a filled triangle on the screen.
    draw_triangle :: proc(x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32, color: Color) ---
    // Draw a filled ellipse on the screen.
    draw_ellipse :: proc(centerX: i32, centerY: i32, radiusX: i32, radiusY: i32, color: Color) ---
    // Draw a filled circle on the screen.
    draw_circle :: proc(centerX: i32, centerY: i32, radius: i32, color: Color) ---
    // Draw a filled polygon on the screen.
    draw_polygon :: proc(points: [^]Vector, numPoints: i32, color: Color) ---
    // Draw a filled arc on the screen.
    draw_arc :: proc(centerX: i32, centerY: i32, radius: f32, startAngle: f32, endAngle: f32, segments: i32, color: Color) ---
    // Draw a filled round-rectangle on the screen.
    draw_rectangle_rounded :: proc(x: i32, y: i32, width: i32, height: i32, cornerRadius: i32, color: Color) ---
    // Draw an image on the screen.
    draw_image :: proc(src: Image, posX: i32, posY: i32) ---
    // Draw a tinted image on the screen.
    draw_image_tint :: proc(src: Image, posX: i32, posY: i32, tint: Color) ---
    // Draw an image, rotated, on the screen.
    draw_image_rotated :: proc(src: Image, posX: i32, posY: i32, degrees: f32, offsetX: f32, offsetY: f32, filter: ImageFilter) ---
    // Draw an image, flipped, on the screen.
    draw_image_flipped :: proc(src: Image, posX: i32, posY: i32, flipHorizontal: bool, flipVertical: bool, flipDiagonal: bool) ---
    // Draw an image, scaled, on the screen.
    draw_image_scaled :: proc(src: Image, posX: i32, posY: i32, scaleX: f32, scaleY: f32, offsetX: f32, offsetY: f32, filter: ImageFilter) ---
    // Draw some text on the screen.
    draw_text :: proc(font: Font, text: cstring, posX: i32, posY: i32, color: Color) ---
    // Save an image to persistant storage.
    save_image :: proc(image: Image, filename: cstring) ---
    // Load an image from a file in cart.
    load_image :: proc(filename: cstring) -> Image ---
    // Resize an image, return copy.
    image_resize :: proc(image: Image, newWidth: i32, newHeight: i32, filter: ImageFilter) -> Image ---
    // Scale an image, return copy.
    image_scale :: proc(image: Image, scaleX: f32, scaleY: f32, filter: ImageFilter) -> Image ---
    // Replace a color in an image, in-place.
    image_color_replace :: proc(image: Image, color: Color, replace: Color) ---
    // Tint a color in an image, in-place.
    image_color_tint :: proc(image: Image, color: Color) ---
    // Fade a color in an image, in-place.
    image_color_fade :: proc(image: Image, alpha: f32) ---
    // Copy a font to a new font.
    font_copy :: proc(font: Font) -> Font ---
    // Scale a font, return a new font.
    font_scale :: proc(font: Font, scaleX: f32, scaleY: f32, filter: ImageFilter) -> Font ---
    // Load a BMF font from a file in cart.
    load_font_bmf :: proc(filename: cstring, characters: cstring) -> Font ---
    // Load a BMF font from an image.
    load_font_bmf_from_image :: proc(image: Image, characters: cstring) -> Font ---
    // Measure the size of some text.
    measure_text :: proc(font: Font, text: cstring, textLength: i32) -> ^Dimensions ---
    // Meaure an image (use 0 for screen).
    measure_image :: proc(image: Image) -> ^Dimensions ---
    // Load a TTY font from a file in cart.
    load_font_tty :: proc(filename: cstring, glyphWidth: i32, glyphHeight: i32, characters: cstring) -> Font ---
    // Load a TTY font from an image.
    load_font_tty_from_image :: proc(image: Image, glyphWidth: i32, glyphHeight: i32, characters: cstring) -> Font ---
    // Load a TTF font from a file in cart.
    load_font_ttf :: proc(filename: cstring, fontSize: i32) -> Font ---
    // Invert the colors in an image, in-place.
    image_color_invert :: proc(image: Image) ---
    // Calculate a rectangle representing the available alpha border in an image.
    image_alpha_border :: proc(image: Image, threshold: f32) -> ^Rectangle ---
    // Crop an image, in-place.
    image_crop :: proc(image: Image, x: i32, y: i32, width: i32, height: i32) ---
    // Crop an image based on the alpha border, in-place.
    image_alpha_crop :: proc(image: Image, threshold: f32) ---
    // Adjust the brightness of an image, in-place.
    image_color_brightness :: proc(image: Image, factor: f32) ---
    // Flip an image, in-place.
    image_flip :: proc(image: Image, horizontal: bool, vertical: bool) ---
    // Change the contrast of an image, in-place.
    image_color_contrast :: proc(image: Image, contrast: f32) ---
    // Use an image as an alpha-mask on another image.
    image_alpha_mask :: proc(image: Image, alphaMask: Image, posX: i32, posY: i32) ---
    // Create a new image, rotating another image.
    image_rotate :: proc(image: Image, degrees: f32, filter: ImageFilter) -> Image ---
    // Create a new image of a gradient.
    image_gradient :: proc(width: i32, height: i32, topLeft: Color, topRight: Color, bottomLeft: Color, bottomRight: Color) -> Image ---
    // Unload an image.
    unload_image :: proc(image: Image) ---
    // Unload a font.
    unload_font :: proc(font: Font) ---
    // Clear an image.
    clear_image :: proc(destination: Image, color: Color) ---
    // Draw a single pixel on an image.
    draw_point_on_image :: proc(destination: Image, x: i32, y: i32, color: Color) ---
    // Draw a line on an image.
    draw_line_on_image :: proc(destination: Image, startPosX: i32, startPosY: i32, endPosX: i32, endPosY: i32, color: Color) ---
    // Draw a filled rectangle on an image.
    draw_rectangle_on_image :: proc(destination: Image, posX: i32, posY: i32, width: i32, height: i32, color: Color) ---
    // Draw a filled triangle on an image.
    draw_triangle_on_image :: proc(destination: Image, x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32, color: Color) ---
    // Draw a filled ellipse on an image.
    draw_ellipse_on_image :: proc(destination: Image, centerX: i32, centerY: i32, radiusX: i32, radiusY: i32, color: Color) ---
    // Draw a circle on an image.
    draw_circle_on_image :: proc(destination: Image, centerX: i32, centerY: i32, radius: i32, color: Color) ---
    // Draw a filled polygon on an image.
    draw_polygon_on_image :: proc(destination: Image, points: [^]Vector, numPoints: i32, color: Color) ---
    // Draw a filled round-rectangle on an image.
    draw_rectangle_rounded_on_image :: proc(destination: Image, x: i32, y: i32, width: i32, height: i32, cornerRadius: i32, color: Color) ---
    // Draw an image on an image.
    draw_image_on_image :: proc(destination: Image, src: Image, posX: i32, posY: i32) ---
    // Draw a tinted image on an image.
    draw_image_tint_on_image :: proc(destination: Image, src: Image, posX: i32, posY: i32, tint: Color) ---
    // Draw an image, rotated, on an image.
    draw_image_rotated_on_image :: proc(destination: Image, src: Image, posX: i32, posY: i32, degrees: f32, offsetX: f32, offsetY: f32, filter: ImageFilter) ---
    // Draw an image, flipped, on an image.
    draw_image_flipped_on_image :: proc(destination: Image, src: Image, posX: i32, posY: i32, flipHorizontal: bool, flipVertical: bool, flipDiagonal: bool) ---
    // Draw an image, scaled, on an image.
    draw_image_scaled_on_image :: proc(destination: Image, src: Image, posX: i32, posY: i32, scaleX: f32, scaleY: f32, offsetX: f32, offsetY: f32, filter: ImageFilter) ---
    // Draw some text on an image.
    draw_text_on_image :: proc(destination: Image, font: Font, text: cstring, posX: i32, posY: i32, color: Color) ---
    // Draw a outlined (with thickness) rectangle on the screen.
    draw_rectangle_outline :: proc(posX: i32, posY: i32, width: i32, height: i32, thickness: i32, color: Color) ---
    // Draw a outlined (with thickness) triangle on the screen.
    draw_triangle_outline :: proc(x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32, thickness: i32, color: Color) ---
    // Draw a outlined (with thickness) ellipse on the screen.
    draw_ellipse_outline :: proc(centerX: i32, centerY: i32, radiusX: i32, radiusY: i32, thickness: i32, color: Color) ---
    // Draw a outlined (with thickness) circle on the screen.
    draw_circle_outline :: proc(centerX: i32, centerY: i32, radius: i32, thickness: i32, color: Color) ---
    // Draw a outlined (with thickness) polygon on the screen.
    draw_polygon_outline :: proc(points: [^]Vector, numPoints: i32, thickness: i32, color: Color) ---
    // Draw a outlined (with thickness) arc on the screen.
    draw_arc_outline :: proc(centerX: i32, centerY: i32, radius: f32, startAngle: f32, endAngle: f32, segments: i32, thickness: i32, color: Color) ---
    // Draw a outlined (with thickness) round-rectangle on the screen.
    draw_rectangle_rounded_outline :: proc(x: i32, y: i32, width: i32, height: i32, cornerRadius: i32, thickness: i32, color: Color) ---
    // Draw a outlined (with thickness) rectangle on an image.
    draw_rectangle_outline_on_image :: proc(destination: Image, posX: i32, posY: i32, width: i32, height: i32, thickness: i32, color: Color) ---
    // Draw a outlined (with thickness) triangle on an image.
    draw_triangle_outline_on_image :: proc(destination: Image, x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32, thickness: i32, color: Color) ---
    // Draw a outlined (with thickness) ellipse on an image.
    draw_ellipse_outline_on_image :: proc(destination: Image, centerX: i32, centerY: i32, radiusX: i32, radiusY: i32, thickness: i32, color: Color) ---
    // Draw a outlined (with thickness) circle on an image.
    draw_circle_outline_on_image :: proc(destination: Image, centerX: i32, centerY: i32, radius: i32, thickness: i32, color: Color) ---
    // Draw a outlined (with thickness) polygon on an image.
    draw_polygon_outline_on_image :: proc(destination: Image, points: [^]Vector, numPoints: i32, thickness: i32, color: Color) ---
    // Draw a outlined (with thickness) round-rectangle on an image.
    draw_rectangle_rounded_outline_on_image :: proc(destination: Image, x: i32, y: i32, width: i32, height: i32, cornerRadius: i32, thickness: i32, color: Color) ---
